# claude-egm

./: .mcp.json  .pre-commit-config.yaml  pyproject.toml
.claude/: settings.json
.serena/: project.yml
src/claude_egm/: __init__.py
