[project]
name = "claude-egm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lazar Kurija", email = "lazarkurija+github@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"

[tool.ty.environment]
root = ["./src"]
